[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gabe Joseph", email = "gabe@coiled.io"},
]
# NOTE: these are dependencies that will actually be installed on the cluster.
dependencies = [
    "distributed>=2022.9.0",
    "dask[complete]>=2022.9.0",
    "pyarrow>=9.0.0",
    "bokeh>=2.4.3",
    "s3fs>=2022.8.2",
    "xarray>=2022.6.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
# NOTE: these are dependencies needed to _run_ the tests.
# Anything imported in `snakebench` or `tests` should go in here.
test = [
    "pytest>=7.1.3",
    "msgspec>=0.8.0",
    "filelock>=3.8.0",
    "sneks-sync @ git+https://github.com/gjoseph92/sneks.git@2934749dc9d546c34175eb0469f35e024e5108de",
    "pytest-xdist>=2.5.0",
    # Coiled needs this for `pkg_resources`, which is sometimes---but not always, i.e. on GitHub---a site package.
    # We shouldn't have to put it explicitly; that's an upstream bug.
    "setuptools>=65.3.0",
]
lint = [
    "pyright>=1.1.270",
    "shed>=0.10.2",
    "flake8>=5.0.4",
    "pre-commit>=2.20.0",
]
util = [
    "ipython>=8.5.0",
]


[tool.pyright]
# Dask and distributed doesn't use `__all__` so pyright thinks nothing is properly exported
reportPrivateImportUsage = false
# Dask doesn't use types enough to even be able to typecheck these
exclude = [
    "tests/**"
]

[tool.pytest.ini_options]
addopts = "-vs"