[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Gabe Joseph", email = "gabe@coiled.io"},
]
# NOTE: these are dependencies that will actually be installed on the cluster.
dependencies = [
    "distributed>=2022.11.1",
    "dask[complete]>=2022.11.1",
    "pyarrow>=9.0.0",
    "bokeh>=2.4.3,<3",
    "s3fs>=2022.11.0",
    "xarray>=2022.11.0",
    "dask-pyspy>=0.4.0",
    "prometheus-client>=0.15.0",
    "lz4>=4.0.2",
    "zarr>=2.13.3",
    "scipy>=1.9.3",
]
requires-python = ">=3.8.4"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm.overrides]
dask = "git+https://github.com/gjoseph92/dask.git@8dd537bee337dc6eab13154e9ed8d0b519ddfc59"
distributed = "git+https://github.com/gjoseph92/distributed.git@aaf9695d578234531fe91dc1c3d7c9509353420e"


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
# NOTE: these are dependencies needed to _run_ the tests.
# Anything imported in `snakebench` or `tests` should go in here.
test = [
    "pytest>=7.1.3",
    "msgspec>=0.8.0",
    "filelock>=3.8.0",
    "sneks-sync @ git+https://github.com/gjoseph92/sneks.git@5d6fb66851841cc9c94b25a206eb5d67b8cc69be",
    "pytest-xdist>=2.5.0",
    "coiled>=0.2.40",
    "pytest-env>=0.8.1",
]
lint = [
    "pyright>=1.1.270",
    "shed>=0.10.2",
    "flake8>=5.0.4",
    "pre-commit>=2.20.0",
]
util = [
    "ipython>=8.5.0",
    "graphviz>=0.20.1",
]


[tool.pyright]
# Dask and distributed doesn't use `__all__` so pyright thinks nothing is properly exported
reportPrivateImportUsage = false
# Dask doesn't use types enough to even be able to typecheck these
exclude = [
    "tests/**"
]

[tool.pytest.ini_options]
addopts = "-vs"
markers = [
    "no_ci: don't run these tests on CI; just for local development",
]
env = [
    "DASK_CONFIG=dask.yaml"
]